test/types/records/generic/named-field-q-1.good
named-field-q-1.chpl:7: error: unresolved call 'p(range(int(64),both,negative))'
named-field-q-1.chpl:3: note: this candidate did not match: p(arg: range(bounds = ?))
named-field-q-1.chpl:3: note: because an argument was incompatible
